--- a/WebApplication1/WebApplication1.UnitTests/WebApplication1.UnitTests.csproj
+++ b/WebApplication1/WebApplication1.UnitTests/WebApplication1.UnitTests.csproj
@@ -55,6 +55,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="BlackCatTests.cs" />
+    <Compile Include="HsinchuTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
