create PostOffice class and PostOfficeTest

--- a/WebApplication1/WebApplication1.UnitTests/WebApplication1.UnitTests.csproj
+++ b/WebApplication1/WebApplication1.UnitTests/WebApplication1.UnitTests.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="BlackCatTests.cs" />
     <Compile Include="HsinchuTests.cs" />
+    <Compile Include="PostOfficeTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
